# hs-http-server

./: README.md  http-server.cabal
app/: Main.hs
src/Cob/: Application.hs
src/Http/: Server.hs
src/Http/Server/: Application.hs  Handler.hs  Request.hs  Response.hs  Router.hs  Socket.hs
src/Http/Server/Internal/: Request.hs  Response.hs  Socket.hs
src/Http/Server/Middleware/: Static.hs
test/Http/: RequestSpec.hs  ResponseSpec.hs  ServerSpec.hs
test/Http/Server/: ApplicationSpec.hs  RouterSpec.hs  ServerSpec.hs
test/Http/Server/Internal/: RequestSpec.hs  ResponseSpec.hs  ServerSpec.hs
